as long as dynamic building won't work, we need these terrible hacks (just for ***** IE)
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13231 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/mihxil/kupu/mmbase/make.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/make.jspx
@@ -1,7 +1,7 @@
 <!-- Trying to build the editor dynamicaly,
      but kupu's make.xsl is not really compatible with Xalan, it seems.
      Anyhow, you'd start with enabling XInclude:
-     - Place new xercesImpl in WEB-INF/lib
+     - Place (a very) new xercesImpl in WEB-INF/lib
      - Place: /WEB-INF/classes/META-INF/services/org.apache.xerces.xni.parser.XMLParserConfiguration  containing:
      org.apache.xerces.parsers.XIncludeParserConfiguration
 
