*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13234 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/mihxil/kupu/mmbase/node.body.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/node.body.jspx
@@ -5,7 +5,8 @@
      >
   <jsp:output omit-xml-declaration="true" />
   <mm:import externid="node" required="true" />
-  <mm:cloud>      
+  <mm:cloud>
+    <mm:param name="org.mmbase.xml-mode" value="kupu" />
     <mm:node referid="node">
       <mm:field name="body" />
     </mm:node>
