--- a/contributions/didactor2/src/pop/templates/pop/css/pop.css
+++ b/contributions/didactor2/src/pop/templates/pop/css/pop.css
@@ -19,6 +19,28 @@ input.popdurationforminput {
 	padding: 0em 0em 0em 0em;
 	background-color: #EAEAEA;
 	border: #404040 1px solid }	
+
+select.popdurationformselect {  
+	font-family: Arial, Tahoma, Verdana, sans-serif;
+	font-size: 1.1em;
+	font-weight: normal;
+	color: #000000;
+	width: 8em;
+	height: 1.4em;
+	padding: 0em 0em 0em 0em;
+	background-color: #EAEAEA;
+	border: #404040 1px solid }	
+
+select.popcompformselect {  
+	font-family: Arial, Tahoma, Verdana, sans-serif;
+	font-size: 1.1em;
+	font-weight: normal;
+	color: #000000;
+	width: 32em;
+	height: 1.4em;
+	padding: 0em 0em 0em 0em;
+	background-color: #EAEAEA;
+	border: #404040 1px solid }	
 	
 textarea.popforminput { 
 	font-family: arial, tahoma, verdana, sans-serif;
