*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13242 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/mihxil/kupu/mmbase/mmbase.css
+++ b/speeltuin/mihxil/kupu/mmbase/mmbase.css
@@ -27,10 +27,18 @@
   margin: 0px;
  
 }
-#tree li.on a.turnon {
+#tree ul { 
+  list-style-type: none;          
+
+ }
+#tree div.on a.turnon {
   display: none;
 }
-#tree li.off a.turnoff {
+#tree div.off a.turnoff {
+  display: none;
+}
+
+#tree div.off a.create {
   display: none;
 }
 		
@@ -69,4 +77,8 @@
   right: 0px;
   top: 0px;
   height: 30px;
+}
+
+img.icon { 
+  border: 0px;
 }
