*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13256 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/mihxil/kupu/mmbase/node.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/node.jspx
@@ -21,7 +21,7 @@
           <form>
             <table>
               <mm:fieldlist fields="title,subtitle,intro">
-                <tr><td><mm:fieldinfo type="guiname" /></td><td><mm:fieldinfo type="input" /></td></tr>
+                <tr><td><mm:fieldinfo type="guiname" /></td><td><mm:fieldinfo  options="noempty" type="input" /></td></tr>
               </mm:fieldlist>
             </table>
           </form>
