*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13269 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/mihxil/kupu/mmbase/tree.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/tree.jspx
@@ -49,7 +49,7 @@
                 </a>
               </mm:isgreaterthan>
             </mm:size>
-            <a class="create" href="javascript: createSubNode(${n});">+</a>
+            <a class="create" title="New" href="javascript: createSubNode(${n});">+</a>
 
         </li>
         <mm:listrelations id="rel">
@@ -68,7 +68,7 @@
                         </a>
                       </mm:isgreaterthan>
                       <mm:compare value="0">
-                        <a class="create" href="javascript: createSubNode(${segment});">+</a>
+                        <a class="create" title="New" href="javascript: createSubNode(${segment});">+</a>
                       </mm:compare>
                     </mm:size>
                   </mm:listrelationscontainer>
