*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13273 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/mihxil/kupu/mmbase/node.body.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/node.body.jspx
@@ -1,14 +1,21 @@
-<mm:content type="text/xml"
+<mm:content type="text/html"
     xmlns="http://www.w3.org/1999/xhtml" 
     xmlns:jsp="http://java.sun.com/JSP/Page" 
     xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0">
   <jsp:output omit-xml-declaration="true" />
-  <mm:import id="node" externid="kupu_node" required="true" from="session" />
-
+  <mm:import id="node" externid="kupu_node" from="session" />
+  <mm:notpresent referid="node">
+    <mm:cloud>
+      <mm:param name="org.mmbase.xml-mode" value="kupu" />
+      <mm:remove referid="node" />
+      <mm:import externid="node" from="parameters" />
+      <mm:node referid="node" id="node" />
+    </mm:cloud>
+  </mm:notpresent>
+  
   <mm:node id="node" referid="node">
     <mm:formatter xslt="xslt/2kupu.xslt" escape="none">
       <mm:field name="body" />
     </mm:formatter>
   </mm:node>
-  <mm:write session="kupu_node" referid="node" />
 </mm:content>
