andre: font sizes
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13472 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/mmweb/css/mmmbase.css
+++ b/mmweb/css/mmmbase.css
@@ -148,6 +148,9 @@ strong
 	/* background-color: #FC9; */
 }
 
+#relatedcontent .relationcontainer th { font-size: 0.85em; }
+#relatedcontent .relationcontainer td { font-size: 0.85em; }
+
 #relatedcontent ul {
 	font-size: 0.85em;
 }
