--- a/html/mmbase/style/css/mmbase.css
+++ b/html/mmbase/style/css/mmbase.css
@@ -1,10 +1,13 @@
 /*
  CSS for MMBase
  @author Michiel Meeuwissen
- @version $Id: mmbase.css,v 1.8 2004-07-14 12:41:31 keesj Exp $;
+ @version $Id: mmbase.css,v 1.9 2005-05-18 14:20:03 michiel Exp $;
 */
 
-
+html { 
+  background-color: white;
+}
+ 
 body {
   font-family: Verdana, Arial, Helvetica, sans-serif;
   background-color: white;
