bigger fonts in learnenvironment, added some icons
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13754 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/core/templates/css/base.css
+++ b/contributions/didactor2/src/core/templates/css/base.css
@@ -88,6 +88,10 @@ table.font {
 	font-weight: normal;
 	color: #000000;
 	text-decoration: none }		
+.learnenvironment {
+        font-size: 1.2em;
+}
+
 
 /* ###### navigation-menu lines on the top of the screen ###### */
 
