some effort for i18n of generated jspx files
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13814 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/mihxil/kupu/mmbase/node.body.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/node.body.jspx
@@ -1,9 +1,10 @@
-<mm:content type="text/html"
+<mm:content type="text/xml"
     xmlns="http://www.w3.org/1999/xhtml" 
     xmlns:jsp="http://java.sun.com/JSP/Page" 
     xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0">
   <jsp:output omit-xml-declaration="true" />
   <mm:import id="node" externid="kupu_node" from="session" />
+
   <mm:notpresent referid="node">
     <mm:cloud>
       <mm:param name="org.mmbase.xml-mode" value="kupu" />
