--- a/contributions/didactor2/src/pop/templates/pop/css/pop.css
+++ b/contributions/didactor2/src/pop/templates/pop/css/pop.css
@@ -41,6 +41,17 @@ select.popcompformselect {
 	padding: 0em 0em 0em 0em;
 	background-color: #EAEAEA;
 	border: #404040 1px solid }	
+
+select.popteacherformselect {  
+	font-family: Arial, Tahoma, Verdana, sans-serif;
+	font-size: 1.1em;
+	font-weight: normal;
+	color: #000000;
+	width: 16em;
+	height: 1.4em;
+	padding: 0em 0em 0em 0em;
+	background-color: #EAEAEA;
+	border: #404040 1px solid }	
 	
 textarea.popforminput { 
 	font-family: arial, tahoma, verdana, sans-serif;
