--- a/speeltuin/mihxil/kupu/mmbase/index.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/index.jspx
@@ -19,6 +19,11 @@
       
     
     <title>MMBase Richtext Editor</title>
+    <mm:link page="/mmbase/style/images/edit.ico">
+      <link rel="icon" href="${_}" type="image/x-icon"/>
+      <link rel="shortcut icon" href="${_}" type="image/x-icon"/>
+    </mm:link>
+
     <mm:import id="kupu_common">../common</mm:import>
   
     
@@ -101,10 +106,10 @@
     
     <image_xsl_uri>drawers/drawer.xsl</image_xsl_uri>
     <link_xsl_uri>drawers/drawer.xsl</link_xsl_uri>
-    <image_libraries_uri>drawers/image.library.jsp</image_libraries_uri>
-    <link_libraries_uri>drawers/link.library.jsp</link_libraries_uri>
-    <search_images_uri>drawers/image.library.jsp</search_images_uri>
-    <search_links_uri> drawers/link.library.jsp</search_links_uri>
+    <image_libraries_uri>drawers/image.library.jspx</image_libraries_uri>
+    <link_libraries_uri>drawers/link.library.jspx</link_libraries_uri>
+    <search_images_uri>drawers/image.library.jspx</search_images_uri>
+    <search_links_uri> drawers/link.library.jspx</search_links_uri>
   
   
         </kupuconfig>
@@ -138,7 +143,7 @@
         
     <div id="kupu">
       
-    <div xmlns="http://www.w3.org/1999/xhtml" class="kupu-fulleditor">
+    <div class="kupu-fulleditor">
       
     
     <div class="kupu-tb" id="toolbar">
@@ -149,7 +154,7 @@
     
     <span class="kupu-tb-buttongroup kupu-logo" style="float: right">
       <button type="button" class="kupu-logo" title="Kupu SVN/unreleased" accesskey="k" id="kupu-logo-button" onclick="window.open('http://kupu.oscom.org');">&#xA0;</button>
-      <button type="button" class="mmbase-logo" title="MMBase" accesskey="k" id="mmbase-logo-button" onclick="window.open('http://www.mmbase.org.org');">&#xA0;</button>
+      <button type="button" class="mmbase-logo" title="MMBase" id="mmbase-logo-button" onclick="window.open('http://www.mmbase.org');">&#xA0;</button>
     </span>
   
     
@@ -223,9 +228,7 @@
       <option xmlns:i18n="http://xml.zope.org/namespaces/i18n" value="lower-alpha" i18n:translate="list-loweralpha">a</option>
     </select>
   
-    
-    
-    
+           
     <div style="display:block;" class="kupu-librarydrawer-parent">
 
     </div>
@@ -372,17 +375,17 @@
       
     
     <div class="kupu-toolbox" id="kupu-toolbox-links">
-      <h1 xmlns:i18n="http://xml.zope.org/namespaces/i18n" i18n:translate=""><j18n:message key="Links"/></h1>
+      <h1><j18n:message key="Links"/></h1>
 
       <div id="kupu-toolbox-addlink">
         <div class="kupu-toolbox-label">
           
-          <span xmlns:i18n="http://xml.zope.org/namespaces/i18n" i18n:translate=""><j18n:message key="&#10;            Link the highlighted text to this URL:&#10;          "/></span>
+          <span><j18n:message key="&#10;            Link the highlighted text to this URL:&#10;          "/></span>
         </div>
 
         <input id="kupu-link-input" class="wide" type="text"/>
         <div class="kupu-toolbox-buttons">
-          <button xmlns:i18n="http://xml.zope.org/namespaces/i18n" type="button" id="kupu-link-button" class="kupu-toolbox-action" i18n:translate=""><j18n:message key="Make Link"/></button>
+          <button><j18n:message key="Make Link"/></button>
         </div>
 
       </div>
@@ -390,30 +393,30 @@
   
     
     <div class="kupu-toolbox" id="kupu-toolbox-images">
-            <h1 xmlns:i18n="http://xml.zope.org/namespaces/i18n" i18n:translate=""><j18n:message key="Images"/></h1>
+            <h1><j18n:message key="Images"/></h1>
 
             <div class="kupu-toolbox-label">
-              <span xmlns:i18n="http://xml.zope.org/namespaces/i18n" i18n:translate=""><j18n:message key="Image class:"/></span>
+              <span><j18n:message key="Image class:"/></span>
             </div>
             <select class="wide" id="kupu-image-float-select">
-              <option xmlns:i18n="http://xml.zope.org/namespaces/i18n" value="image-inline" i18n:translate=""><j18n:message key="Inline"/></option>
-              <option xmlns:i18n="http://xml.zope.org/namespaces/i18n" value="image-left" i18n:translate=""><j18n:message key="Left"/></option>
-              <option xmlns:i18n="http://xml.zope.org/namespaces/i18n" value="image-right" i18n:translate=""><j18n:message key="Right"/></option>
+              <option><j18n:message key="Inline"/></option>
+              <option><j18n:message key="Left"/></option>
+              <option><j18n:message key="Right"/></option>
             </select>
 
             <div class="kupu-toolbox-label">
-              <span xmlns:i18n="http://xml.zope.org/namespaces/i18n" i18n:translate=""><j18n:message key="Insert image at the following URL:"/></span>
+              <span><j18n:message key="Insert image at the following URL:"/></span>
             </div>
             <input id="kupu-image-input" value="kupuimages/kupu_icon.gif" class="wide" type="text"/>
 
             <div class="kupu-toolbox-buttons">
-              <button xmlns:i18n="http://xml.zope.org/namespaces/i18n" type="button" id="kupu-image-addbutton" class="kupu-toolbox-action" i18n:translate=""><j18n:message key="Insert Image"/></button>
+              <button><j18n:message key="Insert Image"/></button>
             </div>
     </div>
   
     
     <div class="kupu-toolbox" id="kupu-toolbox-debug">
-      <h1 xmlns:i18n="http://xml.zope.org/namespaces/i18n" i18n:translate=""><j18n:message key="Debug Log"/></h1>
+      <h1><j18n:message key="Debug Log"/></h1>
       <div id="kupu-toolbox-debuglog" class="kupu-toolbox-label">
       </div>
     </div>
@@ -425,8 +428,7 @@
     <div class="kupu-editorframe">
       <form>					
         <iframe id="kupu-editor" class="kupu-editor-iframe" frameborder="0" src="start.jspx" scrolling="auto">
-          <jsp:text>
-          </jsp:text>
+          <jsp:text> </jsp:text>
         </iframe>
         <textarea class="kupu-editor-textarea" id="kupu-editor-textarea"><jsp:text> </jsp:text></textarea>
       </form>
